# lh3_operator_assignment

./: .gitignore  LICENSE  README.md  pyproject.toml  test_operator.py
tests/: test_lh3_operator_assignment.py
